Fixed navbar stretching in Safari

--- a/brain_and_body/static/brain_and_body/base.css
+++ b/brain_and_body/static/brain_and_body/base.css
@@ -130,9 +130,10 @@ body footer ul li {
   margin: 1em auto 0 auto;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   nav ul #open-menu {
     display: block;
+    max-width: 25px;
   }
   nav ul #open-menu:hover {
     cursor: pointer;
